--- a/source/note.ui
+++ b/source/note.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>JPEGSnoop - Note</string>
+   <string>JPEGsnoop - Note</string>
   </property>
   <property name="modal">
    <bool>true</bool>
@@ -32,7 +32,7 @@
     <set>QDialogButtonBox::Ok</set>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
